<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="#304769"
    android:padding="50dp"
    tools:context="com.example.mega2.final_livw_demo.Mark_Attendance">

    <TextView
        android:id="@+id/textViewMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mark_attendance"
        android:text="@string/mark_attendance"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="monospace" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textViewSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Session"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textViewDept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dept"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textViewClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class1"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <ImageView
        android:id="@+id/imageViewAisha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/finger" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonScanFinger"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanfinger"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonNextStudent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextstudent"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonMarkAttendance"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mark_attendance"
         />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

</LinearLayout>