<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:weightSum="1">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/maintenance"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:text="@string/do_you_want_to_export_import_db"
            android:layout_marginStart="20sp"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_light"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <RadioGroup
        android:id="@+id/radio_g"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="10sp"
            android:text="@string/export_db"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="10sp"
            android:text="@string/import_db"
            android:textSize="16sp" />
    </RadioGroup>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginEnd="20sp"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0sp"
            android:layout_height="50sp"
            android:layout_gravity="start"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="20sp"
           android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="0sp"
            android:layout_height="50sp"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="30sp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/ok"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>